<resources>
    <string name="abc_action_bar_home_description" translatable="false">Navigate home</string>
    <string name="abc_action_bar_home_description_format" translatable="false">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format" translatable="false">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description" translatable="false">Navigate up</string>
    <string name="abc_action_menu_overflow_description" translatable="false">More options</string>
    <string name="abc_action_mode_done" translatable="false">Done</string>
    <string name="abc_activity_chooser_view_see_all" translatable="false">See all</string>
    <string name="abc_activitychooserview_choose_application" translatable="false">Choose an app</string>
    <string name="abc_capital_off" translatable="false">OFF</string>
    <string name="abc_capital_on" translatable="false">ON</string>
    <string name="abc_search_hint" translatable="false">Search…</string>
    <string name="abc_searchview_description_clear" translatable="false">Clear query</string>
    <string name="abc_searchview_description_query" translatable="false">Search query</string>
    <string name="abc_searchview_description_search" translatable="false">Search</string>
    <string name="abc_searchview_description_submit" translatable="false">Submit query</string>
    <string name="abc_searchview_description_voice" translatable="false">Voice search</string>
    <string name="abc_shareactionprovider_share_with" translatable="false">Share with</string>
    <string name="abc_shareactionprovider_share_with_application" translatable="false">Share with %s</string>
    <string name="abc_toolbar_collapse_description" translatable="false">Collapse</string>
    <string name="search_menu_title" translatable="false">Search</string>
    <string name="status_bar_notification_info_overflow" translatable="false">999+</string>
    <string name="Continue">Weiter</string>
    <string name="info">Teile uns konkrete Herausforderungen mit, die dir im Alltag begegnen.\n\nWöchentlich hast du die Chance Gutscheine zu gewinnen. \n\nAuf unserer Facebook-Seite halten wir dich auf dem Laufenden.</string>
    <string name="abc_font_family_body_1_material" translatable="false">sans-serif</string>
    <string name="abc_font_family_body_2_material" translatable="false">sans-serif-medium</string>
    <string name="abc_font_family_button_material" translatable="false">sans-serif-medium</string>
    <string name="abc_font_family_caption_material" translatable="false">sans-serif</string>
    <string name="abc_font_family_display_1_material" translatable="false">sans-serif</string>
    <string name="abc_font_family_display_2_material" translatable="false">sans-serif</string>
    <string name="abc_font_family_display_3_material" translatable="false">sans-serif</string>
    <string name="abc_font_family_display_4_material" translatable="false">sans-serif-light</string>
    <string name="abc_font_family_headline_material" translatable="false">sans-serif</string>
    <string name="abc_font_family_menu_material" translatable="false">sans-serif</string>
    <string name="abc_font_family_subhead_material" translatable="false">sans-serif</string>
    <string name="abc_font_family_title_material" translatable="false">sans-serif-medium</string>
    <string name="app_name">HAL</string>
    <string name="arabic">Arabisch</string>
    <string name="english">Englisch</string>
    <string name="female">Frau</string>
    <string name="german">Deutsch</string>
    <string name="good_luck">Viel Glück bei der Verlosung ;)</string>
    <string name="header">Erstelle dein Profil</string>
    <string name="male">Mann</string>
    <string name="question_arrival">Wann bist du nach Deutschland gekommen?</string>
    <string name="question_birthday">Wie alt bist du?</string>
    <string name="question_category">Zu welcher Kategorie gehört das Problem?</string>
    <string name="question_city">Wo wohnst du?</string>
    <string name="question_country">Aus welchem Land kommst du?</string>
    <string name="question_email">Wie lautet deine E-Mail Adresse?</string>
    <string name="question_gender">Was ist dein Geschlecht?</string>
    <string name="question_problem">Beschreibe das Problem</string>
    <string name="select_language">Wähle deine Sprache aus</string>
    <string name="send">Senden</string>
    <string name="thanks_for_help">Vielen Dank für deine Mithilfe!</string>
    <string name="welcome">Willkommen!</string>
    <string name="pick_date">Datum auswählen</string>
    <string name="hal_logo" translatable="false">HAL Logo</string>
    <string name="back">Zurück</string>
    <string name="problem">Problem</string>
    <string name="data_incomplete">Daten unvollständig!</string>
    <string name="public_key"></string>
    <string name="sending_error">Something went wrong!</string>
    <string-array name="categories">
        <item>Frage</item>
    </string-array>
    <string-array name="cites">
        <item>Muenchen</item>
    </string-array>
    <string-array name="ages">
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>70</item>
        <item>71</item>
        <item>72</item>
        <item>73</item>
        <item>74</item>
        <item>75</item>
        <item>76</item>
        <item>77</item>
        <item>78</item>
        <item>79</item>
        <item>80</item>
        <item>81</item>
        <item>82</item>
        <item>83</item>
        <item>84</item>
        <item>85</item>
        <item>86</item>
        <item>87</item>
        <item>88</item>
        <item>89</item>
    </string-array>
</resources>