<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:adjustViewBounds="true"
        android:background="@mipmap/ic_launcher"
        android:contentDescription="@string/hal_logo"
        android:padding="72dp"
        android:scaleType="center"/>


    <TextView
        android:layout_gravity="center"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:layout_marginBottom="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/thanks_for_help" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#ddd"
        android:textSize="22sp"
        android:layout_marginTop="30dp"
        android:text="@string/good_luck"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="10dp"
        android:background="@null"
        android:onClick="back"
        android:text="@string/back"
        android:textColor="@color/colorAccent"/>

</LinearLayout>
