<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_gravity="center_horizontal"
        android:scaleType="center"
        android:layout_margin="30dp"
        android:padding="56dp"
        android:background="@mipmap/ic_launcher"
        android:contentDescription="@string/hal_logo"/>

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/text"
        android:textSize="22sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/intro"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textSize="15sp"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp"
        android:text="@string/info"
        android:layout_weight="1.0"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:layout_gravity="bottom"
        android:layout_marginBottom="10dp"
        android:id="@+id/next"
        android:background="@null"
        android:textColor="@color/colorAccent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Continue"
        android:onClick="next" />
</LinearLayout>
